--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 dist: trusty
-#if: branch = master
+if: branch = master
 jobs:
   include:
     - stage: build 1 - pyiron-base-image
@@ -7,7 +7,7 @@ jobs:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t pyiron/base:latest pyiron-base/
       - docker images
-#      if: branch = master
+      if: branch = master
         - docker push pyiron/base:latest
         - export TODAY=$(date +%F)
         - docker tag pyiron/base:latest pyiron/base:"$TODAY"
@@ -17,7 +17,7 @@ jobs:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t pyiron/atomistic:latest pyiron-atomistic/
       - docker images
-#      if: branch = master
+      if: branch = master
         - docker push pyiron/atomistic:latest
         - export TODAY=$(date +%F)
         - docker tag pyiron/atomistic:latest pyiron/atomistic:"$TODAY"
@@ -27,7 +27,7 @@ jobs:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t pyiron/pyiron:latest pyiron/
       - docker images
-#      if: branch = master
+      if: branch = master
         - docker push pyiron/pyiron:latest
         - export TODAY=$(date +%F)
         - docker tag pyiron/pyiron:latest pyiron/pyiron:"$TODAY"
@@ -37,7 +37,7 @@ jobs:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t pyiron/md:latest pyiron-md/
       - docker images
-#      if: branch = master
+      if: branch = master
         - docker push pyiron/md:latest
         - export TODAY=$(date +%F)
         - docker tag pyiron/md:latest pyiron/pyiron-md-image:"$TODAY"
@@ -47,7 +47,7 @@ jobs:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t pyiron/sphinx:latest pyiron-sphinxdft/
       - docker images
-#      if: branch = master
+      if: branch = master
         - docker push pyiron/sphinx:latest
         - export TODAY=$(date +%F)
         - docker tag pyiron/sphinx:latest pyiron/sphinx:"$TODAY"
@@ -57,27 +57,32 @@ jobs:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t pyiron/dft:latest pyiron-dft/
       - docker images
-#      if: branch = master
+      if: branch = master
         - docker push pyiron/dft:latest
         - export TODAY=$(date +%F)
         - docker tag pyiron/dft:latest pyiron/dft:"$TODAY"
         - docker push pyiron/dft:"$TODAY"
-#    if: branch = master
       - stage: test1 - pyiron-base-image
+      if: branch = master
         script: docker run --rm pyiron/base echo hello world
       - script: docker run --rm pyiron/base echo hello world
       - stage: test2 - pyiron-image
+      if: branch = master
         script: docker run --rm pyiron/pyiron echo hello world
       - script: docker run --rm pyiron/pyiron echo hello world
       - stage: test3 - pyiron-md-image
+      if: branch = master
         script: docker run --rm pyiron/md echo hello world
       - script: docker run --rm pyiron/md echo hello world
       - stage: test4 - pyiron-sphinx-image
+      if: branch = master
         script: docker run --rm pyiron/sphinx echo hello world
       - script: docker run --rm pyiron/sphinx echo hello world
       - stage: test5 - pyiron-dft-image
+      if: branch = master
         script: docker run --rm pyiron/dft echo hello world
       - script: docker run --rm pyiron/dft echo hello world
       - stage: test6 - pyiron-atomistic-image
+      if: branch = master
         script: docker run --rm pyiron/atomistic echo hello world
       - script: docker run --rm pyiron/atomistic echo hello world
