--- a/.travis.yml
+++ b/.travis.yml
@@ -62,26 +62,31 @@ jobs:
         - docker tag pyiron/dft:latest pyiron/dft:"$TODAY"
         - docker push pyiron/dft:"$TODAY"
     - stage: test1 - pyiron-base-image
+      script: 
       if: branch = master
-        - script: docker run --rm pyiron/base echo hello world
-        - script: docker run --rm pyiron/base echo hello world
+        - docker run --rm pyiron/base echo hello world
+        - docker run --rm pyiron/base echo hello world
     - stage: test2 - pyiron-image
+      script:
       if: branch = master
-        - script: docker run --rm pyiron/pyiron echo hello world
-        - script: docker run --rm pyiron/pyiron echo hello world
+        - docker run --rm pyiron/pyiron echo hello world
+        - docker run --rm pyiron/pyiron echo hello world
     - stage: test3 - pyiron-md-image
+      script: 
       if: branch = master
-        - script: docker run --rm pyiron/md echo hello world
-        - script: docker run --rm pyiron/md echo hello world
+        - docker run --rm pyiron/md echo hello world
+        - docker run --rm pyiron/md echo hello world
     - stage: test4 - pyiron-sphinx-image
+      script: 
       if: branch = master
-        - script: docker run --rm pyiron/sphinx echo hello world
-        - script: docker run --rm pyiron/sphinx echo hello world
+        - docker run --rm pyiron/sphinx echo hello world
+        - docker run --rm pyiron/sphinx echo hello world
     - stage: test5 - pyiron-dft-image
       if: branch = master
-        - script: docker run --rm pyiron/dft echo hello world
-        - script: docker run --rm pyiron/dft echo hello world
+        - docker run --rm pyiron/dft echo hello world
+        - docker run --rm pyiron/dft echo hello world
     - stage: test6 - pyiron-atomistic-image
+      script: 
       if: branch = master
-        - script: docker run --rm pyiron/atomistic echo hello world
-        - script: docker run --rm pyiron/atomistic echo hello world
+        - docker run --rm pyiron/atomistic echo hello world
+        - docker run --rm pyiron/atomistic echo hello world
