--- a/pyiron/Dockerfile
+++ b/pyiron/Dockerfile
@@ -4,7 +4,7 @@ FROM $BASE_CONTAINER
 
 MAINTAINER Jan Janssen <janssen@mpie.de>, Muhammad Hassani <hassani@mpie.de>
 
-USER $PYIRON_UID
+USER $DOCKER_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
