--- a/pyiron/Dockerfile
+++ b/pyiron/Dockerfile
@@ -19,7 +19,7 @@ RUN fix-permissions /home/$DOCKER_USER &&\
     chmod +x ${HOME}/include_notebooks.sh && \
     /bin/bash include_notebooks.sh &&\
     fix-permissions /home/$DOCKER_USER && \
-    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/notebooks
+    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb
 
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
