--- a/pyiron-atomistic/Dockerfile
+++ b/pyiron-atomistic/Dockerfile
@@ -19,15 +19,12 @@ RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
     conda clean --all -f -y && \
     npm cache clean --force && \
     jlpm cache clean && \ 
-    jupyter lab clean
+    jupyter lab clean && \
+    rm ${HOME}/environment.yml 
 
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
-    fix-permissions $CONDA_DIR && \
-    chmod +x ${HOME}/include_notebooks.sh && \
-    /bin/bash include_notebooks.sh &&\
-    fix-permissions /home/$DOCKER_USER && \
-    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb
+    fix-permissions $CONDA_DIR
 
 # Switch back to pyiron to avoid accidental container runs as root
 
