--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jobs:
       services:
         - docker
       language: generic
-      install:
+      script:
         - export TODAY=$(date +%F)
         - docker build -t pyiron/base:latest pyiron-base/
         - docker tag pyiron/base:latest pyiron/base:"$TODAY"
@@ -21,11 +21,12 @@ jobs:
         - docker build -t pyiron/pyiron:latest pyiron/
         - docker tag pyiron/pyiron:latest pyiron/pyiron:"$TODAY"
         - docker images
-      script: 
-        - docker run --rm pyiron/md /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
-        - docker run --rm pyiron/sphinx /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
-        - docker run --rm pyiron/dft /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
-        - docker run --rm pyiron/pyiron /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+    - stage: Test Docker Images
+      script: docker run --rm pyiron/md /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+    - script: docker run --rm pyiron/sphinx /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+    - script: docker run --rm pyiron/dft /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+    - script: docker run --rm pyiron/pyiron /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+    - stage: Deploy Docker Images
       deploy:
         - provider: script
           skip_cleanup: true
