--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
-dist: trusty
-
 jobs:
   include:
     - stage: Build Docker Images
-      script:
+      install:
         - export TODAY=$(date +%F)
         - docker build -t pyiron/base:latest pyiron-base/
         - docker tag pyiron/base:latest pyiron/base:"$TODAY"
@@ -18,12 +16,11 @@ jobs:
         - docker build -t pyiron/pyiron:latest pyiron/
         - docker tag pyiron/pyiron:latest pyiron/pyiron:"$TODAY"
         - docker images
-    - stage: Test Docker Images
-      script: docker run --rm pyiron/md /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
-    - script: docker run --rm pyiron/sphinx /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
-    - script: docker run --rm pyiron/dft /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
-    - script: docker run --rm pyiron/pyiron /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
-    - stage: Deploy Docker Images
+      script: 
+        - docker run --rm pyiron/md /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+        - docker run --rm pyiron/sphinx /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+        - docker run --rm pyiron/dft /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+        - docker run --rm pyiron/pyiron /bin/bash -c 'for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
       deploy:
         - provider: script
           skip_cleanup: true
