--- a/pyiron-dft/environment.yml
+++ b/pyiron-dft/environment.yml
@@ -1,12 +1,4 @@
 channels:
 - conda-forge
 dependencies:
-- sphinxdft
-- gpaw
-# - python
-# - jupyter
-# - jupyterhub
-# - jupyterlab
-# - notebook
-#- pyiron
-#- nglview
+- gpaw =20.1.0
