--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
         - docker tag pyiron/pyiron:latest pyiron/pyiron:"$TODAY"
         - docker images
       script: 
-        - docker run --rm pyiron/pyiron /bin/bash -c 'source /opt/conda/bin/activate; for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f; done;'
+        - docker run --rm pyiron/sphinx /bin/bash -c 'source /opt/conda/bin/activate; i=0; for f in $(ls ~/*.ipynb); do jupyter nbconvert --ExecutePreprocessor.timeout=9999999 --to notebook --execute $f || i=$((i+1)); done; if [ $i -gt 0 ]; then exit 1; fi;'
       deploy:
         - provider: script
           skip_cleanup: true
