--- a/pyiron-damask/environment.yml
+++ b/pyiron-damask/environment.yml
@@ -2,10 +2,10 @@ channels:
 - conda-forge
 dependencies:
 - damask = 3.0.0
-- vtk = 9.0.1
-- itkwidgets = 0.32.0
-- pyvista = 0.26.1
-- seaborn = 0.11.0
+- vtk
+- itkwidgets
+- pyvista
+- seaborn
 - pymatgen = 2020.10.9.1
 - sqsgenerator = 0.0.4
 
