including notebooks for pyiron/experimetal

--- a/pyiron-experimental/Dockerfile
+++ b/pyiron-experimental/Dockerfile
@@ -15,7 +15,11 @@ RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
 
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
-    fix-permissions $CONDA_DIR
+    fix-permissions $CONDA_DIR && \
+    chmod +x ${HOME}/include_notebook.sh && \
+    /bin/bash ${HOME}/include_notebook.sh && \
+    fix-permissions /home/$DOCKER_USER && \
+    chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb
     
 # Switch back to pyiron to avoid accidental container runs as root
 USER $DOCKER_UID
