--- a/pyiron-experimental/Dockerfile
+++ b/pyiron-experimental/Dockerfile
@@ -16,8 +16,8 @@ RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
     fix-permissions $CONDA_DIR && \
-    chmod +x ${HOME}/include_notebook.sh && \
-    /bin/bash ${HOME}/include_notebook.sh && \
+    chmod +x ${HOME}/include_notebooks.sh && \
+    /bin/bash ${HOME}/include_notebooks.sh && \
     fix-permissions /home/$DOCKER_USER && \
     chown -R ${DOCKER_USER}:${DOCKER_GID} ${HOME}/*.ipynb
     
