--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,19 @@ jobs:
     - stage: Build Docker Images
       install:
         - export TODAY=$(date +%F)
-        - docker build -t pyiron/base:latest pyiron-base/
+        - docker build -t pyiron/base:latest base/
         - docker tag pyiron/base:latest pyiron/base:"$TODAY"
-        - docker build -t pyiron/atomistic:latest pyiron-atomistic/
+        - docker build -t pyiron/atomistic:latest atomistic/
         - docker tag pyiron/atomistic:latest pyiron/atomistic:"$TODAY"
-        - docker build -t pyiron/md:latest pyiron-md/
+        - docker build -t pyiron/md:latest md/
         - docker tag pyiron/md:latest pyiron/md:"$TODAY"
-        - docker build -t pyiron/sphinx:latest pyiron-sphinxdft/
+        - docker build -t pyiron/sphinx:latest sphinxdft/
         - docker tag pyiron/sphinx:latest pyiron/sphinx:"$TODAY"
-        - docker build -t pyiron/dft:latest pyiron-dft/
+        - docker build -t pyiron/dft:latest dft/
         - docker tag pyiron/dft:latest pyiron/dft:"$TODAY"
         - docker build -t pyiron/pyiron:latest pyiron/
         - docker tag pyiron/pyiron:latest pyiron/pyiron:"$TODAY"
-        - docker build -t pyiron/experimental:latest pyiron-experimental/
+        - docker build -t pyiron/experimental:latest experimental/
         - docker tag pyiron/experimental:latest pyiron/experimental:"$TODAY"
         - docker images
       script: 
