--- a/md/Dockerfile
+++ b/md/Dockerfile
@@ -1,18 +1,26 @@
-ARG ROOT_CONTAINER=pyiron/atomistic:latest
+ARG ROOT_CONTAINER=pyiron/base:latest
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
 MAINTAINER Jan Janssen <janssen@mpie.de>, Muhammad Hassani <hassani@mpie.de>
+
+USER root
 
 USER $DOCKER_UID
 WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
-#RUN conda install --quiet -y -c conda-forge lammps &&\
 RUN conda env update -n base -f ${HOME}/environment.yml && \
+    jupyter nbextension install nglview --py --sys-prefix && \
+    jupyter nbextension enable nglview --py --sys-prefix && \
+    jupyter labextension install @jupyter-widgets/jupyterlab-manager --no-build && \
+    jupyter labextension install nglview-js-widgets && \
     conda clean --all -f -y && \
-    npm cache clean --force
+    npm cache clean --force && \
+    jlpm cache clean && \ 
+    jupyter lab clean && \
+    rm ${HOME}/environment.yml 
 
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
