--- a/pyiron/Dockerfile
+++ b/pyiron/Dockerfile
@@ -1,4 +1,4 @@
-ARG ROOT_CONTAINER=pyiron/dft:latest
+ARG ROOT_CONTAINER=pyiron/md:latest
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
@@ -9,7 +9,14 @@ WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
-
+RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
+    conda clean --all -f -y && \
+    npm cache clean --force 
+    
+ENV OMPI_MCA_plm=isolated
+ENV OMPI_MCA_rmaps_base_oversubscribe=yes
+ENV OMPI_MCA_btl_vader_single_copy_mechanism=none
+    
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
     fix-permissions $CONDA_DIR && \
