Remove unused Docker Images  (#36)
* Update environment.yml

* Create apt.txt

* Update Dockerfile

* Delete apt.txt

* Update Dockerfile

* Create environment.yml

* Delete include_notebooks.sh

* Delete exclude

* Delete environment.yml

* Delete Dockerfile

* Delete include_notebooks.sh

* Delete exclude

* Delete environment.yml

* Delete Dockerfile

* Delete environment.yml

* Delete apt.txt

* Delete Dockerfile

* Update .travis.yml

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update Dockerfile

* Update README.md

--- a/md/Dockerfile
+++ b/md/Dockerfile
@@ -1,4 +1,4 @@
-ARG ROOT_CONTAINER=pyiron/atomistic:latest
+ARG ROOT_CONTAINER=pyiron/base:latest
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
@@ -9,10 +9,16 @@ WORKDIR $HOME
 ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
-#RUN conda install --quiet -y -c conda-forge lammps &&\
 RUN conda env update -n base -f ${HOME}/environment.yml && \
+    jupyter nbextension install nglview --py --sys-prefix && \
+    jupyter nbextension enable nglview --py --sys-prefix && \
+    jupyter labextension install @jupyter-widgets/jupyterlab-manager --no-build && \
+    jupyter labextension install nglview-js-widgets && \
     conda clean --all -f -y && \
-    npm cache clean --force
+    npm cache clean --force && \
+    jlpm cache clean && \ 
+    jupyter lab clean && \
+    rm ${HOME}/environment.yml 
 
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
