--- a/fenics/environment.yml
+++ b/fenics/environment.yml
@@ -1,12 +1,13 @@
 channels:
 - conda-forge
 dependencies:
-  - pyiron =0.3.13 
-  - matplotlib =3.3.3
-  - nglview =2.7.7
   - fenics =2019.1.0
   - fenics-libdolfin =2019.1.0=*_8
   - mshr =2019.1.0=*_2
-  - scipy =1.5.3
+  - pyiron_base =0.1.41
+  - pyiron =0.3.21
+  - nglview =2.7.7
+  - matplotlib =3.3.3
   - scikit-image =0.18.0
   - seaborn =0.11.0
+  
