--- a/md/Dockerfile
+++ b/md/Dockerfile
@@ -22,7 +22,8 @@ RUN conda env update -n base -f ${HOME}/environment.yml && \
     npm cache clean --force && \
     jlpm cache clean && \ 
     jupyter lab clean && \
-    rm ${HOME}/environment.yml 
+    rm ${HOME}/environment.yml \
+    conda list
 
 USER root
 RUN fix-permissions /home/$DOCKER_USER &&\
