--- a/damask/Dockerfile
+++ b/damask/Dockerfile
@@ -10,7 +10,9 @@ ARG PYTHON_VERSION=default
 
 COPY . ${HOME}/
 RUN conda env update -n base -f ${HOME}/environment.yml --prune && \
-    conda clean --all -f -y
+    conda clean --all -f -y \
+    rm ${HOME}/environment.yml \
+    conda list
 
 USER root
 RUN rm ${HOME}/*.ipynb &&\
